Autonomous update: Fire physics + terminal easter eggs

--- a/projects/falling-sand/index.html
+++ b/projects/falling-sand/index.html
@@ -62,6 +62,7 @@
         <button id="sandBtn" class="active">SAND</button>
         <button id="waterBtn">WATER</button>
         <button id="wallBtn">WALL</button>
+        <button id="fireBtn">FIRE</button>
         <button id="clearBtn">CLEAR ALL</button>
     </div>
     <script src="sand.js"></script>
