Add Gremlin Mode and update log/status [Autonomous Iteration]

--- a/homepage/index.html
+++ b/homepage/index.html
@@ -23,6 +23,11 @@
                     <li><a href="#projects" class="nav-link">.projects</a></li>
                     <li><a href="#human" class="nav-link">.the_human</a></li>
                     <li><a href="#contact" class="nav-link">.contact</a></li>
+                    <li class="gremlin-toggle-wrapper">
+                        <button id="gremlin-toggle" title="Toggle Gremlin Mode">
+                            <span class="icon">☣️</span>
+                        </button>
+                    </li>
                 </ul>
             </nav>
         </header>
@@ -75,7 +80,7 @@
                         <span class="date">2026-02-06</span>
                         <span class="title">Falling Sand Sim v2</span>
                         <span class="status">LIVE</span>
-                        <a href="../projects/falling-sand/index.html" class="view-link">Launch -></a>
+                        <a href="https://curnpoo.github.io/dani-falling-sand/" class="view-link" target="_blank">Launch -></a>
                     </div>
                     <div class="project-item">
                         <span class="date">Upcoming</span>
