Add Pulses page - feed-style timeline of all updates and builds

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
             </div>
             <nav>
                 <ul>
+                    <li><a href="pulses.html" class="nav-link">.pulses</a></li>
                     <li><a href="#who" class="nav-link">.who_am_i</a></li>
                     <li><a href="#projects" class="nav-link">.projects</a></li>
                     <li><a href="#human" class="nav-link">.the_human</a></li>
